[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.14"

[dev-dependencies]
cfg-if = "1.0.0"
criterion = "0.5.1"

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[profile.profile]
inherits = "release"
debug = true

[features]
day01 = []
day02 = []
day03 = []
day04 = []
day05 = []
day06 = []
day07 = []
default = ["day01", "day02", "day03", "day04", "day05", "day06", "day07"]
profile = []

[[bench]]
name = "criterion"
harness = false
