[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.6", default-features = false, features = ["std"] }
paste = "1.0.14"

[dev-dependencies]
cfg-if = "1.0.0"
criterion = "0.5.1"

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[profile.profile]
inherits = "release"
debug = true

[features]
day01 = []
day02 = []
day03 = []
day04 = []
day05 = []
day06 = []
day07 = []
day08 = []
day09 = []
day10 = []
day11 = []
day12 = []
day13 = []
day14 = []
day15 = []
day16 = []
default = [
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "day09",
    "day10",
    "day11",
    "day12",
    "day13",
    "day14",
    "day15",
    "day16",
]
profile = []

[[bench]]
name = "criterion"
harness = false
